[package]
name = "openai-oss-relay"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio      = { version = "1.38", features = ["rt-multi-thread","macros"] }
hyper      = { version = "0.14", features = ["full"] }
bytes      = "1"
futures    = "0.3"
serde_json = "1"
tracing    = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }